# dsa-rust

./: CLAUDE.md  Cargo.toml  README.md
benches/: bench_dsa.rs
examples/: basic.rs
src/: descriptor.rs  device.rs  engine.rs  error.rs  lib.rs  opcode.rs  submit.rs  wq.rs
